# GEOUNED

./: .buildinfo  .gitignore  README.md  developer_guide.html  genindex.html  index.html  methodology.html  mkdocs.yml  objects.inv  prueba.txt  pyproject.toml  python_api.html  search.html  searchindex.js
.doctrees/: developer_guide.doctree  environment.pickle  index.doctree  methodology.doctree  python_api.doctree
.doctrees/install/: index.doctree  install_linux.doctree  install_windows.doctree
.doctrees/usage/: index.doctree  python_api_usage.doctree  python_cadtocsg_cli_usage.doctree  python_cli_usage.doctree
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  improve_documentation.md
1.1.0/: .buildinfo  developer_guide.html  genindex.html  index.html  methodology.html  objects.inv  python_api.html  search.html  searchindex.js
1.2.0/: developer_guide.html  genindex.html  methodology.html  python_api.html  search.html
1.3.0/: .buildinfo  developer_guide.html  genindex.html  index.html  methodology.html  objects.inv  python_api.html  search.html  searchindex.js
1.4.0/: .buildinfo  developer_guide.html  genindex.html  index.html  methodology.html  objects.inv  python_api.html  search.html  searchindex.js
1.5.0/: .buildinfo  developers_guide.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.5.1/: .buildinfo  developers_guide.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.5.2/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.5.3/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.6.0/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.6.1/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.6.2/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.6.3/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
1.6.4/: .buildinfo  developers_guide.html  example_of_use.html  genindex.html  index.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
_modules/: index.html
dev/: .buildinfo  developer_guide.html  developers_guide.html  example_of_use.html  genindex.html  index.html  methodology.html  objects.inv  python_api.html  quick_install_guide.html  search.html  searchindex.js
docs/: conf.py  developer_guide.rst  developers_guide.rst  example_of_use.rst  examples.md  index.md  index.rst  install.rst  installation.md  methodology.rst  python-API.rst  python_api.md  python_api.rst  quick_install_guide.rst  theory_and_methodology.md  usage.rst  version_switcher.json
examples/: configuration.json  configuration.json5  cylinder.stp  example_python_api_from_config_usage.py  example_python_api_usage.py  test_convert.py
install/: index.html  install_linux.html  install_windows.html
scripts/: colorCADmat.py  config.ini  configReverse.ini  geouned  geouned.py  geounedClassCall.py
testing/: test.py
tests/: config.ini  config_cadtocsg_complete_defaults.json  config_cadtocsg_minimal.json  config_cadtocsg_non_defaults.json  config_complete_defaults.json  config_csgtocad_complete.json  config_csgtocad_minimal.json  config_minimal.json  config_non_defaults.json  cross_sections.xml  cuboid.stp  one_solid_with_spine_one_solid_without_spline.step  solid_with_splines.step  test_cadtocsg.py  test_convert.py  test_csgtocad.py  test_oblique_torus.py  test_transport.py  test_version.py  test_volumes.py  update_regression_test_files.py
usage/: index.html  python_api_usage.html  python_cli_usage.html  python_csgtocad_cli_usage.html
(+969 files in other folders)
