[project]
name = "geouned"
version = "1.0.1"
authors = [
  { name="Juan-Pablo Catalan", email="jpcatalan@ind.uned.es" },
  { name="Patrick Sauvan", email="psauvan@ind.uned.es" },
]
maintainers = [
  { name="Patrick Sauvan", email="psauvan@ind.uned.es" },
  { name="Juan-Pablo Catalan", email="jpcatalan@ind.uned.es" },
  { name="Juan Garcia", email="jgarcia@ind.uned.es" },
  { name="Francisco Ogando", email="fogando@ind.uned.es" },
  { name="Javier Alguacil", email="jalguacil@ind.uned.es" },
]
description = "Conversion tool from CAD to CGS/CGS to CAD for Monte Carlo particle transport codes (MCNP & OpenMC)"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: European Union Public Licence 1.2 (EUPL 1.2)",
    "Operating System :: OS Independent",
]
dependencies = [
    "json5",
    "numpy",
]

[project.urls]
Homepage = "https://github.com/GEOUNED-org"
Repository = "https://github.com/GEOUNED-org/GEOUNED"
Documentation = "https://github.com/GEOUNED-org/GEOUNED/docs"

[project.optional-dependencies]
tests = [
    "pytest",
    "black==24.4.2",
]
docs = [
  "sphinx",
  "sphinx_rtd_theme",
  "sphinx_autodoc_typehints",
  "sphinx_rtd_theme",
]

[project.scripts]
geouned_cadtocsg = "geouned.GEOUNED.scripts.geouned_cadtocsg:main"